# pdfuck

./: .gitignore  README.en.md  README.md  pdfuck.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/pdfuck/: __init__.py
