[metadata]
name = pdfuck
version = 1.0.0
author = JiJi <i@mmdjiji.com>
long_description = file: README.md
license = GPL-3.0
url = https://github.com/mmdjiji/pdfuck
classifiers = 
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
  pikepdf

[options.entry_points]
console_scripts =
  pdfuck = pdfuck:main