[metadata]
name = pdfuck
version = 1.0.2
author = JiJi <i@mmdjiji.com>
description = PDFuck: Remove the password of your PDF file
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/mmdjiji/pdfuck
classifiers = 
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
  pikepdf
include_package_data = True

[options.entry_points]
console_scripts =
  pdfuck = pdfuck:main

[options.packages.find]
where=src
include=pdfuck*